--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             When can I see a certain satellite?
         </h1>
         
-        <div class="section">
+        <div class="section" id="input">
             <div class="row">
                 <h2>
                     Find Next Satellite Pass
@@ -41,6 +41,9 @@
                     Search
                 </button>
             </div>
+        </div>
+        <div class="section" id="time">
+
         </div>
 
         <div class="section">
